--- a/SportsfireInjury/AndroidManifest.xml
+++ b/SportsfireInjury/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sportsfire"
     android:versionCode="1"
@@ -12,8 +13,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainPage"
-            android:screenOrientation="landscape">
+            android:name="com.sportsfire.MainPage"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,38 +22,41 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".injury.MainPage"
-            android:screenOrientation="landscape">
+            android:name="com.sportsfire.injury.MainPage"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name=".injury.InjuryForm"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="landscape">
-            
+            android:name="com.sportsfire.injury.InjuryForm"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
-            android:name=".injury.ListPageActivity"
-            android:screenOrientation="landscape">
+            android:name="com.sportsfire.injury.ListPageActivity"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name=".injury.SquadListActivity"
-            android:screenOrientation="landscape">
+            android:name="com.sportsfire.injury.SquadListActivity"
+            android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name=".injury.PlayerListActivity"
-            android:screenOrientation="landscape">
+            android:name="com.sportsfire.injury.PlayerListActivity"
+            android:screenOrientation="landscape" >
         </activity>
-         <activity
-            android:name=".injury.PlayerInjuryActivity"
-            android:screenOrientation="landscape">
+        <activity
+            android:name="com.sportsfire.injury.PlayerInjuryActivity"
+            android:screenOrientation="landscape" >
         </activity>
-         <activity
-            android:name=".screening.MainPage"
-            android:screenOrientation="landscape">
+        <activity
+            android:name="com.sportsfire.screening.MainPage"
+            android:screenOrientation="landscape" >
         </activity>
-         <activity
-            android:name=".screening.TestSelectionActivity"
-            android:screenOrientation="landscape">
+        <activity
+            android:name="com.sportsfire.screening.TestSelectionActivity"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="com.sportsfire.TestInputForm"
+            android:label="@string/title_activity_test_input_form" >
         </activity>
     </application>
 
