--- a/SportsfireInjury/AndroidManifest.xml
+++ b/SportsfireInjury/AndroidManifest.xml
@@ -58,6 +58,10 @@
             android:name="com.sportsfire.TestInputForm"
             android:label="@string/title_activity_test_input_form" >
         </activity>
+        <activity
+            android:name="com.sportsfire.SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
