analysis line graph
achartengine
one of these clasess is liscenced under Apache so read lisceence doc
before messing with it
+some renaming
+test fragment used for input also

--- a/SportsfireInjury/AndroidManifest.xml
+++ b/SportsfireInjury/AndroidManifest.xml
@@ -51,11 +51,15 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name="com.sportsfire.screening.TestSelectionActivity"
+            android:name="com.sportsfire.screening.InputPageActivity"
             android:screenOrientation="landscape" >
         </activity>
      	<activity
             android:name="com.sportsfire.screening.AnalysisPageActivity"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="com.sportsfire.screening.AnalysisGraphPage"
             android:screenOrientation="landscape" >
         </activity>
         <activity
