--- a/SportsfireInjury/AndroidManifest.xml
+++ b/SportsfireInjury/AndroidManifest.xml
@@ -60,6 +60,7 @@
         </activity>
         <activity
             android:name="com.sportsfire.screening.AnalysisGraphPage"
+            android:theme="@android:style/Theme.NoTitleBar"
             android:screenOrientation="landscape" >
         </activity>
         <activity
@@ -69,6 +70,11 @@
         </activity>
         <activity
             android:name="com.sportsfire.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="landscape"  >
+        </activity>
+        <activity
+            android:name="org.achartengine.GraphicalActivity"
             android:label="@string/title_activity_settings"
             android:screenOrientation="landscape"  >
         </activity>
