--- a/SportsfireInjury/tests/AndroidManifest.xml
+++ b/SportsfireInjury/tests/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="com.sportsfire" />
+        android:targetPackage="com.sportsfire.injury" />
 
     <application
         android:icon="@drawable/ic_launcher"
