--- a/SportsFireScreening/AndroidManifest.xml
+++ b/SportsFireScreening/AndroidManifest.xml
@@ -2,37 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sportsfire.screening"
     android:versionCode="1"
-    android:versionName="1.0" >
-<uses-permission
-        android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission
-        android:name="android.permission.USE_CREDENTIALS" />
-    <uses-permission
-        android:name="android.permission.MANAGE_ACCOUNTS" />
-    <uses-permission
-        android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
-    <uses-permission
-        android:name="android.permission.INTERNET" />
-    <uses-permission
-        android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission
-        android:name="android.permission.READ_SYNC_STATS" />
-    <uses-permission
-        android:name="android.permission.READ_SYNC_SETTINGS" />
-    <uses-permission
-        android:name="android.permission.WRITE_SYNC_SETTINGS" />
-    <uses-permission 
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    android:versionName="1.01" >
+
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_SYNC_STATS" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:logo="@drawable/gohome"
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
-       
         <activity
             android:name="com.sportsfire.screening.ScreeningMainPage"
             android:screenOrientation="landscape" >
@@ -46,66 +38,71 @@
             android:name="com.sportsfire.screening.InputPageActivity"
             android:screenOrientation="landscape" >
         </activity>
-     	<activity
+        <activity
             android:name="com.sportsfire.screening.AnalysisPageActivity"
             android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="com.sportsfire.screening.AnalysisGraphPage"
-            android:theme="@android:style/Theme.NoTitleBar"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name="com.sportsfire.screening.TestInputForm"
             android:label="@string/title_activity_test_input_form"
-            android:screenOrientation="landscape"  >
+            android:screenOrientation="landscape" >
         </activity>
         <activity
             android:name="com.sportsfire.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:screenOrientation="landscape"  >
+            android:screenOrientation="landscape" >
         </activity>
         <activity
-		android:name="org.achartengine.GraphicalActivity"
+            android:name="org.achartengine.GraphicalActivity"
             android:label="@string/title_activity_settings"
-            android:screenOrientation="landscape"  >
+            android:screenOrientation="landscape" >
         </activity>
-<activity
+        <activity
             android:name="com.sportsfire.sync.AuthenticatorActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Dialog"
-            android:excludeFromRecents="true"
             android:configChanges="orientation"
-            >
+            android:excludeFromRecents="true"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Dialog" >
+
             <!--
                 No intent-filter here! This activity is only ever launched by
                 someone who explicitly knows the class name
             -->
         </activity>
-        
+
         <service
             android:name="com.sportsfire.sync.AuthenticationService"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
-                <action
-                    android:name="android.accounts.AccountAuthenticator" />
+                <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
+
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
-        <service android:name="com.sportsfire.sync.SyncService"
-            android:exported="true">
+        <service
+            android:name="com.sportsfire.sync.SyncService"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
-            <meta-data android:name="android.content.SyncAdapter" android:resource="@xml/syncadapter" />
-		</service>
-        <provider 
-		    android:authorities="com.sportsfire.sync.Provider"
-		    android:multiprocess="true"
-		    android:name="com.sportsfire.sync.Provider">
-		</provider>
+
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter" />
+        </service>
+
+        <provider
+            android:name="com.sportsfire.sync.Provider"
+            android:authorities="com.sportsfire.sync.Provider"
+            android:multiprocess="true" >
+        </provider>
     </application>
 
 </manifest>
